# mlx-zonos2

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
scripts/: zonos2_cli.py  zonos2_enroll.py  zonos2_hf_upload.sh  zonos2_long_accept.py  zonos2_quant_eval.py
scripts/zonos2_oracle/: clone.py  dump_fixtures.py  run_oracle.sh
scripts/zonos2_oracle/zonos2_ref/: __init__.py  loader.py  native.py  runtime.py
scripts/zonos2_oracle/zonos2_ref/assets/: params.json
src/zonos2_mlx/: __init__.py  chunking.py  config.py  dac.py  generate.py  layers.py  model.py  pipeline.py  quantize.py  seam_polish.py  speaker.py  textnorm.py  weights.py
tests/: test_chunking.py  test_config.py  test_dac_parity.py  test_e2e_parity.py  test_generate.py  test_kv_cache_equiv.py  test_quant.py  test_seam_polish.py  test_speaker_parity.py  test_textnorm.py  test_trunk_parity.py  test_weights.py
