[project]
name = "zonos2-mlx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mlx>=0.31.2",
    "numpy>=2.4.6",
    "safetensors>=0.8.0",
    "soundfile>=0.14.0",
]

[project.optional-dependencies]
oracle = [
    "accelerate>=1.14.0",
    "huggingface-hub>=1.19.0",
    "torch>=2.12.0",
    "torchaudio>=2.11.0",
    "tqdm>=4.68.2",
    "transformers>=5.0,<=5.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zonos2_mlx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "gpu: requires the GPU + the 8B trunk weights (run serially)",
    "slow: long-running test",
]
