[project]
name = "zonos2-mlx"
version = "0.1.0"
description = "Pure-MLX port of Zyphra ZONOS2 8B-MoE TTS for Apple Silicon (zero-shot voice cloning, 44.1 kHz)."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
requires-python = ">=3.12"
dependencies = [
    "mlx>=0.31.2",
    "numpy>=2.4.6",
    "safetensors>=0.8.0",
    "soundfile>=0.14.0",
]

[project.optional-dependencies]
oracle = [
    "accelerate>=1.14.0",
    "huggingface-hub>=1.19.0",
    "torch>=2.12.0",
    "torchaudio>=2.11.0",
    "tqdm>=4.68.2",
    "transformers>=5.0,<=5.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zonos2_mlx"]

[tool.ruff]
# The oracle reference is vendored byte-identical to upstream
# (Zonos2_TTS-ComfyUI/native.py); don't lint third-party code we must not edit.
extend-exclude = ["scripts/zonos2_oracle/zonos2_ref"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "gpu: requires the GPU + the 8B trunk weights (run serially)",
    "slow: long-running test",
]
